# udl_project

./: .gitignore  .pre-commit-config.yaml  DataLoaderFFSet.py  DataloaderFlowerSet.py  Makefile  Models.py  README.md  ensemble_addon.py  inspect_data.py  main.py  master_comparison.ipynb  master_comparison.py  plot.py  pyproject.toml  requirements.txt  resNetEx.py  test_augmentation.ipynb
infrastructure/: requirements.in  requirements.txt
udl_project/: DataLoaderFFSet.py  DataloaderFlowerSet.py  config.py  data_loader.py  data_loader_flowers.py  ensemble_addon.py  master_comparison.py  plot.py  plotter.py  resNetEx.py  train_ensemble_model.py  train_model.py  train_model_l2_explicit.py
udl_project/data_handling/: custom_data_loader.py  data_loader_flowers.py  flower_dataset.py  food_dataset.py
udl_project/models/: cnn.py  dropout_res_net.py  ensemble_model.py  res_block.py  res_net.py  res_net_cnn.py
udl_project/training/: abstract_trainer.py  config.py  data_augmentation_trainer.py  dropout_model_trainer.py  early_stopping_model_trainer.py  ensemble_model_trainer.py  l2_regularized_model_trainer.py  resnet_model_trainer.py  resnet_tfl_trainer.py
udl_project/utils/: data_loading.py  weights.py
