[project]
name = "udl_project"
version = "0.1.0"
description = "A sample Python project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yourusername/udl_project"

[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = 'google'
